Fondo de la pagina

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
+	
+	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOTOS</title>
-    <link rel="stylesheet" href="css/main.css?rnd=243">
-    <script src = "js/main.js"></script>
+    <title>Motocicletas</title>
+    <link rel="stylesheet" href="css/main.css?rnd=100">
+    <script src = "js/main.js?rnd=100"></script> 
 
 </head>
 <body>
-      
+	<div>
+		<h1 id="titulo">Motocicletas de Altocilindraje e Innovadoras</h1>
+
+		<p>
+			<button onclick="location.href='login.html'">Iniciar sesión</button>
+		</p>
+
+		<div class = "image">
+			<img src="imgs/2020-Yamaha-MT-10-Review.jpg">
+	    </div>
+	</div>
+l
+	
 </body>
 </html>
