Modificación de posiciones

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 
 </head>
 <body>
-	<div>
+	<div id="main-container">
 		<h1 id="titulo">Motocicletas de Altocilindraje e Innovadoras</h1>
 
-		<p>
-			<button onclick="location.href='login.html'">Iniciar sesión</button>
-		</p>
+		
+		<button id="btn_login" onclick="location.href='login.html'">Iniciar sesión</button>
+		
 
-		<div class = "image">
+		
+	</div>
+
+	<div class = "image">
 			<img src="imgs/2020-Yamaha-MT-10-Review.jpg">
 	    </div>
-	</div>
 l
 	
 </body>
