--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motocicletas</title>
-    <link rel="stylesheet" href="css/main.css?rnd=100">
+    <link rel="stylesheet" href="css/main.css?rnd=10">
     <script src = "js/main.js?rnd=100"></script> 
 
 </head>
@@ -15,10 +15,24 @@
 
 		
 		<button id="btn_login" onclick="location.href='login.html'">Iniciar sesión</button>
+		<button id="btn_login" onclick="location.href='login.html'">Registrarse</button>
 		
 
 		
 	</div>
+
+	<table class="tabla_img">
+        <tr>
+            <th><img src="imgs/2020-Yamaha-MT-10-Review.jpg" alt="Imagen 1 "></th>
+            <th><img src="imgs/Honda-2021.jpg" alt="Imagen 2 "></th></th>
+            <th><img src="imgs/Kawasaki_Z1000_R.jpg" alt="Imagen 3 "></th></th>
+        </tr>
+        <tr>
+            <th><img src="imgs/ktm.jpeg" alt=""></th>
+            <th><img src="imgs/tvsrtr200.jpg" alt=""></th>
+            <th><img src="imgs/Yamaha-Niken-2018-2.jpg" alt=""></th>
+        </tr>
+    </table>
 
 	<div class = "image">
 			<img src="imgs/2020-Yamaha-MT-10-Review.jpg">
