--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		
 	</div>
 
-	<table class="tabla_img">
+	<table class="tabla">
         <tr>
             <th><img src="imgs/2020-Yamaha-MT-10-Review.jpg" alt="Imagen 1 "></th>
-            <th><img src="imgs/Honda-2021.jpg" alt="Imagen 2 "></th></th>
-            <th><img src="imgs/Kawasaki_Z1000_R.jpg" alt="Imagen 3 "></th></th>
+            <th><img src="imgs/Honda-2021.jpg" alt="Imagen 2 "></th>
+            <th><img src="imgs/Kawasaki_Z1000_R.jpg" alt="Imagen 3 "></th>
         </tr>
         <tr>
             <th><img src="imgs/ktm.jpeg" alt=""></th>
@@ -34,10 +34,7 @@
         </tr>
     </table>
 
-	<div class = "image">
-			<img src="imgs/2020-Yamaha-MT-10-Review.jpg">
-	    </div>
-l
+	
 	
 </body>
 </html>
