--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 </head>
 <body>
 	<div id="main-container">
-		<h1 id="titulo">Motocicletas de Altocilindraje e Innovadoras</h1>
 
+        <button id="btn_login" onclick="location.href='login.html'">Iniciar sesión</button>
+        <button id="btn_login" onclick="location.href='registrarse.html'">Registrarse</button>
+        <button id="btn_login" onclick="location.href='informacion.html'">Información</button>
 		
-		<button id="btn_login" onclick="location.href='login.html'">Iniciar sesión</button>
-		<button id="btn_login" onclick="location.href='login.html'">Registrarse</button>
-		
+    </div>
+    <h1 id="titulo">Motocicletas de Altocilindraje e Innovadoras 2021</h1>
 
-		
-	</div>
 
 	<table class="tabla">
         <tr>
