--- a/informacion.html
+++ b/informacion.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Inicio de Sesión</title>
+	<title>Información</title>
 </head>
 <body>
-	<h1 id= "titulo"> ¡Bienvenido de Nuevo!</h1>
-	
+	<h1 id= "titulo"> INFORMACIÓN</h1>
+	La Pagina fue creada con fines educativos y ludicos para personas con gustos en motocicletas
 </body>
 </html>
