--- a/registrarse.html
+++ b/registrarse.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Inicio de Sesión</title>
+	<title>Registrarse</title>
 </head>
 <body>
-	<h1 id= "titulo"> ¡Bienvenido de Nuevo!</h1>
+	<h1 id= "titulo"> ¡Bienvenido a la Comunidad Motociclista!</h1>
 	
 </body>
 </html>
