Estilo de Registro

--- a/registrarse.html
+++ b/registrarse.html
@@ -3,10 +3,30 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Registrarse</title>
+    <title>Registro</title>
+    <link rel="stylesheet" href="css/main.css?rnd=10">
 </head>
-<body>
-	<h1 id= "titulo"> ¡Bienvenido a la Comunidad Motociclista!</h1>
+<body id="body-registrarse">
 	
+	<form action="" method="POST" id="form">
+        <div class="form">
+            <h1 id="h1-registro">Registro</h1>
+            <div class="gru">
+                <input type="text" name="" id="name" required><span class="barra"></span>
+                <label>Nombre</label>
+            </div>
+            <div class="gru">
+                <input type="email" name="" id="name" required><span class="barra"></span>
+                <label>Email</label>
+            </div>
+            <div class="gru">
+                <input type="password" name="" id="name" required><span class="barra"></span>
+                <label>Contraseña</label>
+            </div>
+
+            <button type="submit">Registrarse</button>
+            
+        </div>
+    </form>
 </body>
 </html>
