--- a/registrarse.html
+++ b/registrarse.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="css/main.css?rnd=10">
+    <link rel="stylesheet" href="css/main.css?rnd=20">
 </head>
 <body id="body-registrarse">
 	
@@ -24,7 +24,7 @@
                 <label>Contraseña</label>
             </div>
 
-            <button type="submit">Registrarse</button>
+            <button id="btn-registrarse" type="submit">Registrarse</button>
             
         </div>
     </form>
