Estilo de login terminado

--- a/login.html
+++ b/login.html
@@ -3,10 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/main.css?rnd=18">
 	<title>Inicio de Sesión</title>
 </head>
-<body>
-	<h1 id= "titulo"> ¡Bienvenido de Nuevo!</h1>
+<body id="body-login">
+	
+	<form action="" method="POST" id="form">
+        <div class="form">
+            <h1 id="h1-registro">Iniciar Sesión</h1>
+            <div class="gru">
+                <input type="email" name="" id="name" required><span class="barra"></span>
+                <label>Email</label>
+            </div>
+            <div class="gru">
+                <input type="password" name="" id="name" required><span class="barra"></span>
+                <label>Contraseña</label>
+            </div>
+
+            <button id="btn-login" type="submit">Iniciar Sesión</button>
+            
+        </div>
+    </form>
 	
 </body>
 </html>
