--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motocicletas</title>
-    <link rel="stylesheet" href="css/main.css?rnd=10">
-    <script src = "js/main.js?rnd=100"></script> 
+    <link rel="stylesheet" href="css/main.css?rnd=8">
+    <script src = "js/main.js?rnd=170"></script> 
 
 </head>
 <body>
 	<div id="main-container">
 
-        <button id="btn_login" onclick="location.href='login.html'">Iniciar sesión</button>
+        <!--<button id="btn_login" onclick="location.href='login.html'">Iniciar sesión</button>
         <button id="btn_login" onclick="location.href='registrarse.html'">Registrarse</button>
-        <button id="btn_login" onclick="location.href='informacion.html'">Información</button>
+        <button id="btn_login" onclick="location.href='informacion.html'">Información</button>-->
+
+        <a href="login.html" class="a-index" type="submit">Iniciar sesión</a>
+        <a href="registrarse.html" class="a-index" type="submit">Registro</a>
+        <a href="informacion.html" class="a-index" type="submit">Información</a>
 		
     </div>
     <h1 id="titulo">Motocicletas de Altocilindraje e Innovadoras 2021</h1>
