--- a/informacion.html
+++ b/informacion.html
@@ -4,9 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Información</title>
+	<link rel="stylesheet" href="css/main.css?rnd=12">
 </head>
-<body>
-	<h1 id= "titulo"> INFORMACIÓN</h1>
-	La Pagina fue creada con fines educativos y ludicos para personas con gustos en motocicletas
+<body id="body-info"> 
+	<h1 id="titulo-info">INFORMACIÓN</h1>
+
+		<p id="p-info">Esta Página web fue desarrollada por el estudiante jean pierre agudelo
+			con fines educativos para el curso de plataformas empresariales <br>
+			Para el desarrollo usamos herramientas de html 5, css 3 y javaScript  </p>
+	
+
 </body>
 </html>
