--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motocicletas</title>
-    <link rel="stylesheet" href="css/main.css?rnd=8">
-    <script src = "js/main.js?rnd=170"></script> 
+    <link rel="stylesheet" href="css/main.css?rnd=15">
+    <script src = "js/main.js?rnd=10"></script> 
 
 </head>
 <body>
-	<div id="main-container">
+  <!--	<div id="main-container">
 
-        <!--<button id="btn_login" onclick="location.href='login.html'">Iniciar sesión</button>
-        <button id="btn_login" onclick="location.href='registrarse.html'">Registrarse</button>
-        <button id="btn_login" onclick="location.href='informacion.html'">Información</button>-->
-
-        <a href="login.html" class="a-index" type="submit">Iniciar sesión</a>
+      <a href="login.html" class="a-index" type="submit">Iniciar sesión</a>
         <a href="registrarse.html" class="a-index" type="submit">Registro</a>
-        <a href="informacion.html" class="a-index" type="submit">Información</a>
+        <a href="informacion.html" class="a-index" type="submit">Información</a> 
 		
-    </div>
+    </div> -->
+    <ul class="menu">
+        <li><a href="login.html">Iniciar Sesión</a></li>
+        <li><a href="registrarse.html">Registrarse</a></li>
+        <li><a href="informacion.html">Acerca de </a></li>
+    </ul>
     <h1 id="titulo">Motocicletas de Altocilindraje e Innovadoras 2021</h1>
 
 
