--- a/index.html
+++ b/index.html
@@ -5,40 +5,35 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motocicletas</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css?rnd=15">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@500&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <script src = "js/main.js?rnd=10"></script> 
 
 </head>
 <body>
-  <!--	<div id="main-container">
-
-      <a href="login.html" class="a-index" type="submit">Iniciar sesión</a>
-        <a href="registrarse.html" class="a-index" type="submit">Registro</a>
-        <a href="informacion.html" class="a-index" type="submit">Información</a> 
-		
-    </div> -->
+ 
     <ul class="menu">
         <li><a href="login.html">Iniciar Sesión</a></li>
         <li><a href="registrarse.html">Registrarse</a></li>
         <li><a href="informacion.html">Acerca de </a></li>
     </ul>
-    <h1 id="titulo">Motocicletas de Altocilindraje e Innovadoras 2021</h1>
+  
 
+    <section id="pantalla-dividida">
 
-	<table class="tabla">
-        <tr>
-            <th><img src="imgs/2020-Yamaha-MT-10-Review.jpg" alt="Imagen 1 "></th>
-            <th><img src="imgs/Honda-2021.jpg" alt="Imagen 2 "></th>
-            <th><img src="imgs/Kawasaki_Z1000_R.jpg" alt="Imagen 3 "></th>
-        </tr>
-        <tr>
-            <th><img src="imgs/ktm.jpeg" alt=""></th>
-            <th><img src="imgs/tvsrtr200.jpg" alt=""></th>
-            <th><img src="imgs/Yamaha-Niken-2018-2.jpg" alt=""></th>
-        </tr>
-    </table>
+        <div class="izquierda">
+        <h1 id="bienvenido">¡Bienvenido!</h1>
+        <p id="parrafo-index">Esta pagina tiene como fin ser una galería de motocicletas sean de altocilindraje ó innovadoras, para 
+                             para ingresar a la galería por favor inicia sesión. </p>
+        <a id="a-inicio" href="login.html">Iniciar Sesión</a>
+        </div>
+        <div class="derecha"></div>
+    </section>
+    
 
-	
 	
 </body>
 </html>
