--- a/login.html
+++ b/login.html
@@ -8,22 +8,22 @@
 </head>
 <body id="body-login">
 	
-	<form action="" method="POST" id="form">
+	<form id="form">
         <div class="form">
             <h1 id="h1-registro">Iniciar Sesión</h1>
             <div class="gru">
-                <input type="email" name="" id="name" required><span class="barra"></span>
-                <label>Email</label>
+                <input type="text" name="" id="nombre" required><span class="barra"></span>
+                <label>Nombre</label>
             </div>
             <div class="gru">
-                <input type="password" name="" id="name" required><span class="barra"></span>
+                <input type="password" name="" id="contrasena" required><span class="barra"></span>
                 <label>Contraseña</label>
             </div>
 
-            <button id="btn-login" type="submit">Iniciar Sesión</button>
+            <button id="btn-login" type="button">Iniciar Sesión</button>
             
         </div>
     </form>
-	
+  <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
