--- a/galeria.html
+++ b/galeria.html
@@ -4,23 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css?rnd=15">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Galería</title>
 </head>
 <body>
-    <h1>Galería</h1>
+    <h1 id="titulo-galeria">Galería</h1>
 
-    <table class="tabla">
-        <tr>
-            <th><img src="imgs/2020-Yamaha-MT-10-Review.jpg" alt="Imagen 1 "></th>
-            <th><img src="imgs/Honda-2021.jpg" alt="Imagen 2 "></th>
-            <th><img src="imgs/Kawasaki_Z1000_R.jpg" alt="Imagen 3 "></th>
-        </tr>
-        <tr>
-            <th><img src="imgs/ktm.jpeg" alt=""></th>
-            <th><img src="imgs/tvsrtr200.jpg" alt=""></th>
-            <th><img src="imgs/Yamaha-Niken-2018-2.jpg" alt=""></th>
-        </tr>
-    </table>
+        <table class="tabla">
+            <tr>
+                <th class="img-container"><img src="imgs/2020-Yamaha-MT-10-Review.jpg" alt="Imagen 1 ">
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Titulo</h4>
+                        <p>Texto de prueba</p>
+                        <p>Texto de prueba</p>
+                      </div> </th>
+               
+                <th class="img-container"><img src="imgs/Honda-2021.jpg" alt="Imagen 2 "><div class="text-container">
+                    <h4>Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+                <th class="img-container" ><img src="imgs/Kawasaki_Z1000_R.jpg" alt="Imagen 3 "><div class="text-container">
+                    <h4 class="titulo-tabla">Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+            </tr>
+            <tr>
+                <th class="img-container"><img src="imgs/ktm.jpeg" alt=""> <div class="text-container">
+                    <h4 class="titulo-tabla">Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+                <th class="img-container"><img src="imgs/tvsrtr200.jpg" alt=""> <div class="text-container">
+                    <h4 class="titulo-tabla">Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+                <th class="img-container"><img src="imgs/Yamaha-Niken-2018-2.jpg" alt=""> <div class="text-container">
+                    <h4 class="titulo-tabla">Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+            </tr>
+            <tr>
+                <th class="img-container"><img src="imgs/Honda-1000.jpg" alt=""> <div class="text-container">
+                    <h4 class="titulo-tabla">Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+                <th class="img-container"><img src="imgs/ducati.jfif" alt=""> <div class="text-container">
+                    <h4 class="titulo-tabla">Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+                <th class="img-container"><img src="imgs/honda-futuro.jpg" alt=""> <div class="text-container">
+                    <h4 class="titulo-tabla">Titulo</h4>
+                    <p>Texto de prueba</p>
+                    <p>Texto de prueba</p>
+                  </div> </th></th>
+            </tr>
+
+        </table>
 
     
 </body>
