--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="izquierda">
         <h1 id="bienvenido">¡Bienvenido!</h1>
-        <p id="parrafo-index">Esta pagina tiene como fin ser una galería de motocicletas sean de altocilindraje ó innovadoras, para 
+        <p id="parrafo-index">Esta pagina tiene como fin ser una galería de motocicletas sean de alto cilindraje ó innovadoras, 
                              para ingresar a la galería por favor inicia sesión. </p>
         <a id="a-inicio" href="login.html">Iniciar Sesión</a>
         </div>
