--- a/galeria.html
+++ b/galeria.html
@@ -15,55 +15,63 @@
             <tr>
                 <th class="img-container"><img src="imgs/2020-Yamaha-MT-10-Review.jpg" alt="Imagen 1 ">
                     <div class="text-container">
-                        <h4 class="titulo-tabla">Titulo</h4>
-                        <p>Texto de prueba</p>
-                        <p>Texto de prueba</p>
-                      </div> </th>
+                        <h4 class="titulo-tabla">Yamaha MT 10</h4>
+                        <p>Cilindraje: 998 </p>
+                        <p>Tipo: Alto cilindraje</p> </div>
+                      </th> 
                
                 <th class="img-container"><img src="imgs/Honda-2021.jpg" alt="Imagen 2 "><div class="text-container">
-                    <h4>Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Honda Riding Assist</h4>
+                        <p>Cilindraje: -- </p>
+                        <p>Tipo: Innovador</p> </div>
+                 </th> 
                 <th class="img-container" ><img src="imgs/Kawasaki_Z1000_R.jpg" alt="Imagen 3 "><div class="text-container">
-                    <h4 class="titulo-tabla">Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Kawasaki Z1000R</h4>
+                        <p>Cilindraje: 1043 </p>
+                        <p>Tipo: Alto cilindraje</p> </div>
+                 </th> </div>
             </tr>
             <tr>
                 <th class="img-container"><img src="imgs/ktm.jpeg" alt=""> <div class="text-container">
-                    <h4 class="titulo-tabla">Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Super KTM 1290 </h4>
+                        <p>Cilindraje: 1300 </p>
+                        <p>Tipo: Altocilindraje</p> </div>
+                 </th> 
                 <th class="img-container"><img src="imgs/tvsrtr200.jpg" alt=""> <div class="text-container">
-                    <h4 class="titulo-tabla">Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Tvs rtr 200</h4>
+                        <p>Cilindraje: 199 </p>
+                        <p>Tipo: Bajo cilindraje</p> </div>
+                 </th>
                 <th class="img-container"><img src="imgs/Yamaha-Niken-2018-2.jpg" alt=""> <div class="text-container">
-                    <h4 class="titulo-tabla">Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Yamaha Niken 847</h4>
+                        <p>Cilindraje: </p>
+                        <p>Tipo: Altocilindraje</p> </div>
+                 </th>
             </tr>
             <tr>
                 <th class="img-container"><img src="imgs/Honda-1000.jpg" alt=""> <div class="text-container">
-                    <h4 class="titulo-tabla">Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Honda CBR1000RR</h4>
+                        <p>Cilindraje: 998 </p>
+                        <p>Tipo: Altocilindraje</p> </div>
+                 </th>
                 <th class="img-container"><img src="imgs/ducati.jfif" alt=""> <div class="text-container">
-                    <h4 class="titulo-tabla">Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Ducati streetfighter v4</h4>
+                        <p>Cilindraje: 1103</p>
+                        <p>Tipo: Altocilindraje</p> </div>
+                 </th>
                 <th class="img-container"><img src="imgs/honda-futuro.jpg" alt=""> <div class="text-container">
-                    <h4 class="titulo-tabla">Titulo</h4>
-                    <p>Texto de prueba</p>
-                    <p>Texto de prueba</p>
-                  </div> </th></th>
+                    <div class="text-container">
+                        <h4 class="titulo-tabla">Honda V4</h4>
+                        <p>Cilindraje: 1237 </p>
+                        <p>Tipo: Innovadora</p> </div>
+                  </th>
             </tr>
 
         </table>
