--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
             </div>
 
             <button id="btn-login" type="button">Iniciar Sesión</button>
+            <a id="a-olvido" href="contrasena.html">¿Olvidaste la contraseña?</a>
             
         </div>
     </form>
