--- a/informacion.html
+++ b/informacion.html
@@ -5,14 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Información</title>
 	<link rel="stylesheet" href="css/main.css?rnd=12">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css?rnd=15">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@500&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 </head>
 <body id="body-info"> 
-	<h1 id="titulo-info">INFORMACIÓN</h1>
 
-		<p id="p-info">Esta Página web fue desarrollada por el estudiante jean pierre agudelo
-			con fines educativos para el curso de plataformas empresariales <br>
-			Para el desarrollo usamos herramientas de html 5, css 3 y javaScript  </p>
-	
-
+			<section id="pantalla-dividida">
+				<div class="izquierda-info">
+				</div>
+				<div class="derecha-info"> <h1 id="acerca">Acerca De</h1>
+					<p id="parrafo-info">Esta Página web fue desarrollada por el estudiante jean pierre agudelo
+						con fines educativos para el curso de plataformas empresariales <br>
+						Para el desarrollo usamos herramientas de html 5, css 3 y javaScript.</p></div>
+			</section>
 </body>
 </html>
