Avance Acerca De

--- a/informacion.html
+++ b/informacion.html
@@ -17,9 +17,13 @@
 				<div class="izquierda-info">
 				</div>
 				<div class="derecha-info"> <h1 id="acerca">Acerca De</h1>
-					<p id="parrafo-info">Esta Página web fue desarrollada por el estudiante jean pierre agudelo
-						con fines educativos para el curso de plataformas empresariales <br>
-						Para el desarrollo usamos herramientas de html 5, css 3 y javaScript.</p></div>
+					<p id="parrafo-info">Esta Página web fue creada por el estudiante jean pierre agudelo
+						con fines educativos para el curso de plataformas empresariales. <br>
+						Para el desarrollo usamos herramientas como laragon que se usa para la 
+						creación de lo que llamamos el entorno de desarrollo, es decir todo un conjunto de programas necesarios para desarrollar aplicaciones, 
+						Para el desarrollo de la pagina Usamos HTML 5, para mejorar su apariencia trabajamos con CSS y Para el funcionamiento del login Trabajamos con JavaScript
+					</p><a id="a-home" href="index.html">Home</a></div>
+					
 			</section>
 </body>
 </html>
